name:                red-black-tree
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/GAumala/red-black-tree
license:             BSD3
license-file:        LICENSE
author:              Gabriel Aumala
maintainer:          example@example.com
copyright:           2017 Gabriel Aumala
category:            Data Structure
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.BinaryTree
                     , Data.RedBlackTree
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite red-black-tree-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Data.BinaryTreeSpec
                     , Data.RedBlackTreeSpec
                     , Data.RedBlackTreePropertiesSpec
                     , Data.TestUtils
  main-is:             Spec.hs
  build-depends:       base
                     , red-black-tree
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/GAumala/red-black-tree
